--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,26 +1,31 @@
-Set up LINUX
-============
-cd djmovies
-sudo apt-get install mediainfo unrar imagemagick libxml2-dev libxslt-dev zlib1g-dev ffmpeg mkvtoolnix
-pip3 install virtualenv
-virtualenv venv
-source venv/bin/activate
-pip3 install -r requirements.txt 
-deactivate
+INSTALL PACKAGES
+================
 
-Set up MACOS
-============
-brew install mediainfo rar freetype imagemagick@6
-brew install ffmpeg 
-export MAGICK_HOME=/opt/homebrew/opt/imagemagick@6
+	LINUX:
 
-=======To restore movies
+		sudo apt-get install mediainfo unrar imagemagick libxml2-dev libxslt-dev zlib1g-dev ffmpeg mkvtoolnix
 
-cp ~/Dropbox/backups/djmovies.70.sqlite db_movies.sqlite
-mkdir movies/static/mov_imgs/
-cp -R ~/Dropbox/backups/dj_movies_images movies/static/mov_imgs/
+	MACOS:
+
+		brew install mediainfo rar freetype imagemagick@6 ffmpeg
+		export MAGICK_HOME=/opt/homebrew/opt/imagemagick@6
 
 
-To execute
-==========
-./go.sh
+INITIAL SETUP
+=============
+	git clone https://github.com/coderazzi/djmovies	
+	cd djmovies
+	git clone https://github.com/coderazzi/djmovies-userdata userdata
+	ln -sf ../../userdata/mov_imgs movies/static
+	python3 -m venv venv
+	source venv/bin/activate
+	pip3 install -r requirements.txt 
+
+	# to start from scratch:
+	bash userdata/clear_all.sh
+
+
+
+RUN IT
+======
+	./go.sh
